--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,60 +1,5 @@
-export(
-       balloonplot,
-       bandplot,
-       barplot2,
-       bluered,
-       boxplot.n,
-       col2hex,
-       colorpanel,
-       greenred,
-       heatmap.2,
-       hist2d,
-       lowess,
-       ooplot,
-       overplot,
-       panel.overplot,
-       plot.lm2,
-       plot.venn,
-       plotCI,
-       plotmeans,
-       qqnorm.aov,
-       redblue,
-       redgreen,
-       residplot,
-       rich.colors,
-       sinkplot,
-       smartlegend,
-       space,
-       textplot,
-       venn,
-       wapply
-)
+# Default NAMESPACE created by R
+# Remove the previous line if you edit this file
 
-importFrom(gtools, invalid)
-importFrom(gtools, odd)
-importFrom(gdata, nobs)
-importFrom(gdata, reorder.factor)
-
-importFrom(stats, reorder)
-importFrom(stats, na.omit)
-
-# No Namespace
-#importFrom(caTools, runsd)
-#importFrom(caTools, runmean)
-
-
-S3method(balloonplot,default)
-S3method(balloonplot,table)
-
-S3method(barplot2,default)
-
-S3method(lowess,default)
-S3method(lowess,formula)
-
-S3method(ooplot,default)
-
-S3method(textplot,character)
-S3method(textplot,data.frame)
-S3method(textplot,default)
-S3method(textplot,matrix)
-
+# Export all names
+exportPattern(".")
